--- a/docs/pages/surge-building-blocks/multi-vm.mdx
+++ b/docs/pages/surge-building-blocks/multi-vm.mdx
@@ -9,9 +9,9 @@ import ZoomImage from "../../components/ZoomImage";
 
 Surge's architecture is designed to support multiple Virtual Machines (VMs), offering developers the flexibility to choose the best environment for their applications. This multi-VM approach not only broadens the scope of what can be built on Bitcoin L2s but also integrates advanced cryptographic techniques like Zero-Knowledge Proofs (ZKPs) to ensure secure and scalable smart contract execution.
 
-<p align="center">
+{/* <p align="center">
   <ZoomImage width="90%" src="/assets/multivm.png" alt="Multi VMs" />
-</p>
+</p> */}
 
 ### How Multi-VM Support Works?{" "}
 
