--- a/docs/pages/metalayer/superstack.mdx
+++ b/docs/pages/metalayer/superstack.mdx
@@ -1,11 +1,11 @@
 ---
 title: Surge | Superstack
-description: The gateway to scale Rollups on Bitcoin
+description: The MetaLayer to scale Rollups on Bitcoin
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Superstack [The gateway to scale Rollups on Bitcoin]
+# Superstack [The MetaLayer to scale Rollups on Bitcoin]
 
 ## Overview
 
@@ -13,11 +13,11 @@ The Surge Superstack operates as a crucial intermediate layer above the Bitcoin 
 
 ## Architecture and Network
 
-- **PoS-based Decentralizatio:** Our Proof-of-Stake model ensures network security and operational efficiency.
+- **PoS-based Decentralization:** Our Proof-of-Stake model ensures network security and operational efficiency.
 
-- **Validator Program:** Theeē Superstack validator program is designed to expand our network. It allows participants to set up nodes and contribute to the network's robustness, enhancing decentralized validation processes.
+- **Validator Program:** The Superstack validator program is designed to expand our network. It allows participants to set up nodes and contribute to the network's robustness, enhancing decentralized validation processes.
 
-## Core Functions of Superstack
+## Building Blocks of Superstack
 
 - **Decentralized Verification Layer:** The ZKP Verification Layer is responsible for validating the correctness of transaction proofs without exposing any underlying data. This enhances both privacy and security, acting as a foundational layer for trustless and verifiable rollup interactions on Bitcoin.
 
@@ -28,7 +28,15 @@ The Surge Superstack operates as a crucial intermediate layer above the Bitcoin 
   - **Indexers:** Efficient tools for organizing and accessing transaction data, supporting scalability.
   - **Bridges for Runes and Ordinals:** Specialized bridges that enable seamless integration and interaction with Runes and Ordinals, expanding the utility of rollups.
 
+## Impact of Soft Forks on Superstack
+**Enhancing On-Chain Scripting with OP_CAT**\
+The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantly enhance the Superstack's capabilities. _OP_CAT_, by enabling more sophisticated on-chain scripting, offers the opportunity to reduce our reliance on off-chain processes. This improvement can lead to a more streamlined and efficient system, particularly in terms of transaction execution and validation.
+
+**Optimizing Performance and Efficiency**\
+With the integration of _OP_CAT_, we anticipate being able to offload certain off-chain verification computations from the Superstack, reallocating that processing power toward proof aggregation. This shift would not only optimize the performance of the Superstack but also improve overall efficiency. By reducing the need for off-chain dependencies, the Superstack can become even more robust, maintaining high levels of security and scalability while adapting to evolving technological advancements within the Bitcoin network.
+
 <ZoomImage
   src="/assets/superstack-core-functions.png"
   alt="superstack core functions"
 />
+
