--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -9,7 +9,7 @@ import { HomePage } from "vocs/components";
 import Zoom from "react-medium-image-zoom";
 import "react-medium-image-zoom/dist/styles.css";
 import SurgeIntro from "../components/SurgeIntro.tsx";
-import SuperStack from "../components/SuperStack.tsx";
+import SurgeNetwork from "../components/SurgeNetwork.tsx";
 import RaasStack from "../components/RaasStack.tsx";
 import RunNode from "../components/RunNode.tsx";
 import Resources from "../components/Resources.tsx";
@@ -24,7 +24,7 @@ import BitcoinPlayground from "../components/BitcoinPlayground.tsx";
       <HomePage.Tagline className="!text-[40px] !font-bold mb-4">Build with Surge</HomePage.Tagline>
       <HomePage.Description className="mb-10 !text-base	 dark:!text-grey-100 !text-grey-100">Our complete guide to getting started with Surge, Bitcoin’s first modular Rollup as a Service </HomePage.Description>
     <div className="grid grid-cols-1 md:grid-cols-2 gap-5">
-      <SuperStack/>
+      <SurgeNetwork/>
       <RaasStack/>
       <SurgeIntro/>
       <BitcoinPlayground/>
