super stack related structure change

--- a/docs/pages/metalayer/signer.mdx
+++ b/docs/pages/metalayer/signer.mdx
@@ -1,11 +1,11 @@
 ---
-title: Surge | MPC TSS Bridge
+title: Surge | Singer Node
 description: 2 way Peg with MPC TSS based Network Nodes for BTC Bridge
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-# MPC TSS Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
+## Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
 
 Unlike traditional BTC bridges that rely on central custodians or multi-signature federations, Surge introduces a novel approach leveraging a verifier network powered by Multi-Party Computation (MPC) Threshold Signature Scheme (TSS).
 
