--- a/docs/pages/metalayer/validators.mdx
+++ b/docs/pages/metalayer/validators.mdx
@@ -5,10 +5,10 @@ description: Super Validators in the Surge network
 
 import ZoomImage from "../../components/ZoomImage";
 
-# Super Validators [Validators for the Superstack Network]
+# Super Validators [Validators for the Surge Network Network]
 
 ## Overview
-In the Superstack network, validators are critical to maintaining security, network integrity, and seamless cross-chain operations. The network features two primary types of validators:
+In the Surge Network network, validators are critical to maintaining security, network integrity, and seamless cross-chain operations. The network features two primary types of validators:
 
 1. **Verifier Nodes** 
 2. **Operator Nodes**
@@ -26,10 +26,10 @@ Key Responsibilities,
 Bridge Operator Nodes manage additional MPC (Multi-Party Computation) nodes that are essential for securing secure the cross-chain bridges, especially for Bitcoin. They ensure the safe transfer of assets between Bitcoin and Surge.
 Key Responsibilities,
   - Bridge Operator's MPC nodes to contribute to the security of the Bitcoin bridge.
-  - Secure Bitcoin transactions within the SuperStack network.
+  - Secure Bitcoin transactions within the Surge Network network.
   - Maintain the integrity of cross-chain operations.
 
 ### Becoming a Super Validator
 *Details coming soon...*
 
-Super Validators are pivotal in maintaining the security and efficiency of the Superstack network. By combining the roles of both Verification Validators and Bridge Operators, they add a robust layer of security, ensuring the stability of the network while enjoying greater rewards for their efforts.
+Super Validators are pivotal in maintaining the security and efficiency of the Surge Network network. By combining the roles of both Verification Validators and Bridge Operators, they add a robust layer of security, ensuring the stability of the network while enjoying greater rewards for their efforts.
