Updating signer node

--- a/docs/pages/metalayer/signer.mdx
+++ b/docs/pages/metalayer/signer.mdx
@@ -1,38 +1,25 @@
 ---
-title: Surge | Singer Node
-description: 2 way Peg with MPC TSS based Network Nodes for BTC Bridge
+title: Surge | Singer Node 
+description: Decentralized TSS network for signing operations using the DKLS23 EdDSA/ECDSA scheme
 ---
 
 import ZoomImage from "../../components/ZoomImage";
 
-## Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
+## 5.1 Decentralized Signing and Inscription
 
-Unlike traditional BTC bridges that rely on central custodians or multi-signature federations, Surge introduces a novel approach leveraging a verifier network powered by Multi-Party Computation (MPC) Threshold Signature Scheme (TSS).
-
-## High-Level Overview
-
-Traditional BTC bridges operate under the control of either a central custodian or a federation, introducing potential points of failure and trust dependencies
+The Signer Node manages decentralized signing operations using the DKLS23 EdDSA/ECDSA scheme, ensuring secure, decentralized management of cryptographic keys for inscribing ZKPs into Bitcoin.
+- **Decentralized Key Management:** A quorum-based signing process of nodes is required to sign a transaction, ensuring a decentralized approach to key management.
 
 <ZoomImage
-  className="md:w-[80%] mx-auto"
-  src="/assets/high-level-overview.png"
-  alt="high level overview"
+  src="/assets/signer_node.png"
+  alt="surge node"
+  className="md:w-[100%] w-[100%] mx-auto"
 />
 
-Surge, however, employs a decentralized verifier network, which utilizes MPC to ensure that no single party controls the entire transaction verification process or key management.
+- **BTC Vault Operations:** Signer nodes manage BTC vault operations, enabling secure peg-in and peg-out transactions for rollups. BTC is secured and governed through decentralized signing mechanisms.
 
-## Two way Peg with MPC Network
+## 5.2 Security and Resilience via TSS Network
 
-The two-way peg in Surge is designed to facilitate unilateral withdrawals, allowing users to exit the system at their discretion without compromising security. This is powered by use of MPC technology, which significantly reduces trust requirements.
-
-<ZoomImage src="/assets/two-way-peg.png" alt="two way peg" />
-
-By integrating MPC technology within a verifier network that accesses the Data Availability (DA) layer to validate proofs submitted by provers, we ensure the secure and private release of funds
-
-## Benefits of Using MPC in Surge
-
-- **Decentralized Key Management:** In an MPC system, the private key required to sign blockchain transactions is never fully assembled in one location. Instead, key shares are distributed among multiple parties
-
-- **Verification Without Full Disclosure:** MPC allows nodes in the network to verify transactions and proofs without needing to reveal the underlying data to each other. This enhances privacy and security, as each node only processes parts of the data necessary for verification
-
-- **Reduction in Trust Dependencies:** By distributing decision-making and data handling across several nodes, the MPC-based system does not rely on a central authority or a trusted third party.
+The Signer Node operates within a standalone  TSS (Threshold Signature Scheme)  network, ensuring that no single node controls the signing process and utilizes M of N consensus to securely manage key shares and signatures.
+- **Distributed Key Generation (DKG):** Key generation is distributed across the TSS network, ensuring that no single party has access to the entire private key.
+- **Pro-activization, Key rotation:** The system includes regular key rotation and refresh processes, ensuring that keys are never permanently exposed and remain secure even in the face of node compromise..
