--- a/docs/pages/overview/why-surge.mdx
+++ b/docs/pages/overview/why-surge.mdx
@@ -1,26 +1,14 @@
 ---
 title: Surge | Why Surge?
-description: The Need for Rollups Infrastructure on Bitcoin
+description: The Need for Metalayer on Bitcoin
 ---
 
-# Why Surge? [The Need for Rollups Infrastructure on Bitcoin]
+# Why Surge?
 
-Bitcoin L2s are not just a narrative, hype, or experiment; they're an adaptive response from the Bitcoin community to overcome scalability limitations. It's easy to forget that Bitcoin is a network and an asset (BTC), representing the most decentralized and secure blockchain with highest market capitalization.
+## Why a Native Metalayer is Needed for Bitcoin
+Bitcoin serves as a secure and decentralized digital transaction protocol but faces limitations in scalability and functionality, hindering its ability to support advanced dApps and handle high transaction volumes. The Surge Metalayer is designed to overcome these challenges without altering Bitcoin's fundamental layer, offering enhanced throughput and smart contract capabilities while maintaining Bitcoin's security guarantees.
+## Composability and Interoperability
+Surge goes beyond simple scalability by enabling composable infrastructure. Through Inter-Blockchain Communication (IBC), Surge facilitates seamless interaction with other blockchain ecosystems, enabling the transfer of assets, data, and zk-proofs. This composability empowers developers to integrate functionalities from various blockchains into unified applications, significantly enhancing flexibility and interoperability.
+The Surge architecture allows developers to leverage Bitcoin’s robust security while building rollups that interact with other chains. This creates a multi-layered, interoperable environment where novel decentralized solutions can be composed.
 
-**A fundamental question:** Why Bitcoin L2s now? The following events have an answer.
-
-- **Bitcoin Upgrades:** <p className="_list-paragraph"> Significant advancements in Bitcoin's scalability began with the Segregated Witness(SegWit) update in July 2017. The next major upgrade, Taproot, was activated in November 2021.</p>
-- **Ordinals:** <p className="_list-paragraph">Ordinals sparked the builder culture in the Bitcoin Ecosystem, such as early NFT and token projects that flooded the Ethereum Network in 2017. Which eventually led the Ethereum community to address scalability issues.</p>
-- **Ethereum L2 success:** <p className="_list-paragraph">The Ethereum community's layered approach has led to billions in total value locked (TVL). Blob is a very recent upgrade that validates the need for L2s.</p>
-
-We now witness significant advances in Bitcoin layers, empowering them to act on the BTC asset. Bitcoin L2s inherit Bitcoin's reorg security and finality while overcoming its programmability and performance limitations, promising a brighter future for Bitcoin.
-
-Despite this progress, much of the necessary infrastructure remains in the development and experimental stages. But it's impressive to see a number of teams trying to experiment and build this out; it's [40+ as of today.](https://bitcoinl2map.com/)
-
-While the early enthusiasm is mind-blowing, the untapped potential of the Bitcoin economy is ~8x bigger than that of its counterpart, Ethereum. We need better tools for more communities and teams to experiment and build on Bitcoin.
-
----
-
-Presenting, Surge! Building essential infrastructure so teams can make decisions with minimal effort and focus on community building.
-
-> For The surge moment of Bitcoin 🥂
+<img src="/assets/why-surge.png" alt="why" width="600" height="600" />
