--- a/docs/pages/metalayer/verifier.mdx
+++ b/docs/pages/metalayer/verifier.mdx
@@ -38,10 +38,46 @@ We are developing an innovative Proof-of-Stake (PoS) based Zero Knowledge Proof 
 
 ## Benefits of Our Approach
 
-**Security**: By using the Bitcoin blockchain for final proof inscription, we harness its security features, ensuring the highest level of integrity for our proofs.
+The Surge Network offers a range of benefits designed to enhance the scalability, security, and interoperability of decentralized systems, particularly with its focus on Bitcoin integration and zk-proofs. Here are the key benefits of the Surge Network:
 
-**Scalability**: The use of the Cosmos SDK allows for a scalable architecture, capable of handling a growing number of proofs and validators.
+### 1. **Bitcoin Integration with Enhanced Scalability**
 
-**Efficiency**: Our PoS mechanism and discrepancy challenge process ensure that the network operates efficiently, minimizing the chances of invalid proofs being accepted.
+- **Layer on Bitcoin Security:** Surge builds on Bitcoin's robust and decentralized security model while overcoming Bitcoin’s limitations in scalability. This allows for higher transaction throughput and more complex dApp development without altering Bitcoin’s core layer.
+- **Bitcoin Finality:** Surge ensures Bitcoin finality, meaning that once proofs and transactions are verified on Bitcoin, they are permanently and securely recorded.
 
-This approach combines the strengths of the Cosmos SDK, zero-knowledge proofs, staking on Babylon and Bitcoin's security to create a highly reliable, decentralized and secure verifier network.
+### 2. **Zero-Knowledge Proof (zk-proof) Verification**
+
+- **Efficient Proof Aggregation:** Surge integrates zero-knowledge proof aggregation, enabling multiple zk-proofs to be bundled into a single compact proof. This increases efficiency, reducing costs while maintaining the privacy and security guarantees of zk-proofs.
+- **Cost-Effective Transactions:** By aggregating proofs and leveraging Bitcoin finality, Surge ensures transactions are verified in a cost-effective manner, optimizing resource usage.
+
+### 3. **Composability and Interoperability**
+
+- **Inter-Blockchain Communication (IBC):** Surge facilitates seamless interoperability between blockchains, enabling the transfer of assets, data, and zk-proofs across different networks. This composability allows developers to build unified applications that utilize functionalities from multiple blockchains.
+- **Cross-Chain Integration:** Surge supports communication and asset exchange between various blockchain ecosystems, broadening its use cases and allowing decentralized applications to integrate with other networks easily.
+
+### 4. **Proof of Stake (PoS) with zk-proof Security**
+
+- **Decentralized Staking Mechanism:** Surge employs a Proof of Stake model using Surge tokens, which offers participants a secure and decentralized way to contribute to the network. This enhances both security and scalability, as PoS networks are less resource-intensive than Proof of Work (PoW) models.
+- **Enhanced Security through zk-proofs:** The use of zero-knowledge proofs ensures that validators can verify transactions without exposing sensitive data, thus promoting privacy and enhancing security.
+
+### 5. **Transparency and Auditing**
+
+- **UTXO Indexer:** Surge's UTXO Indexer tracks and verifies all Bitcoin-linked transactions in real-time, ensuring transparency and easy auditing of all network-related transactions. This builds trust within the network and ensures compliance with auditing standards.
+- **Finality Assurance:** Surge provides a reliable and auditable record of Bitcoin-related transactions, ensuring that once a transaction is finalized, it remains immutable and traceable.
+
+### 6. **Reduced Reliance on Intermediaries**
+
+- **No Need for Bridges or Token Wrapping:** Surge enables seamless interaction with Bitcoin and other blockchain networks without relying on cross-chain bridges, token wrapping, or custodial intermediaries, enhancing security and reducing risks of exploit.
+- **Direct Engagement with PoS Networks:** Surge allows Bitcoin holders and network participants to engage directly with Proof of Stake blockchains, providing liquidity and rewards without third-party involvement.
+
+### 7. **Developer-Friendly Environment**
+
+- **zk-proof and Smart Contract Capabilities:** Surge enhances Bitcoin by supporting smart contract functionality and zk-proof integration, enabling developers to create more complex and secure decentralized applications (dApps).
+- **Optimized Resource Use:** The proof aggregation and UTXO indexing features are designed to optimize resource usage, reducing computational and storage costs for developers and validators.
+
+### 8. **Increased Security and Accountability**
+
+- **EOTS (Extractable One-Time Signatures):** Surge employs EOTS technology to promote honest behavior among validators. If a signature is reused (double signing), the secret key is exposed, enhancing accountability within the network.
+- **Fraud Prevention:** The network’s rigorous verification process, including signature validation and proof checks, ensures that fraudulent activities are minimized.
+
+By leveraging these key benefits, the Surge Network is positioned to provide a scalable, secure, and interoperable solution that can seamlessly integrate with Bitcoin and other blockchain ecosystems, supporting advanced decentralized applications and enhancing blockchain functionality.
