--- a/docs/pages/metalayer/overview.mdx
+++ b/docs/pages/metalayer/overview.mdx
@@ -19,16 +19,20 @@ The Surge Network operates as a crucial intermediate layer above the Bitcoin Set
 
 ## Building Blocks of Surge Network
 
-- **Decentralized Verification Layer:** The ZKP Verification Layer is responsible for validating the correctness of transaction proofs without exposing any underlying data. This enhances both privacy and security, acting as a foundational layer for trustless and verifiable rollup interactions on Bitcoin.
+### Verifiers
 
-- **MPC TSS Secure Bridge:** This component provides a secure, trust-minimized bridge for a 2-way peg between Bitcoin and rollups. It utilizes Threshold Signature Schemes (TSS) to securely manage and safeguard the pegs, ensuring the integrity of cross-chain asset transfers.
+ZKP Verification Layer: The Verifiers are responsible for validating the correctness of transaction proofs using Zero-Knowledge Proofs without revealing any underlying data. This process enhances both privacy and security, serving as a foundational layer for trustless and verifiable Rollup interactions on Bitcoin. By ensuring that all transactions are legitimate without exposing sensitive information, Verifiers maintain the integrity and confidentiality of the network.
 
-- **Utilities for Rollups:** The Surge Network includes a suite of essential tools that support the development and operation of rollups:
-  - **Oracles:** Reliable data feeds that provide smart contracts with accurate and real-time information.
-  - **Indexers:** Efficient tools for organizing and accessing transaction data, supporting scalability.
-  - **Bridges for Runes and Ordinals:** Specialized bridges that enable seamless integration and interaction with Runes and Ordinals, expanding the utility of rollups.
+### Signers
+
+Transaction Signing and Key Management: Signers handle the critical task of transaction signing and managing distributed cryptographic keys. They govern BTC vault operations with precision and reliability, ensuring that all transactions are authorized and secure. By distributing key management, Signers enhance the network's resilience against single points of failure and potential security breaches.
+
+### Indexers
+
+Efficient Data Organization and Access: Indexers provide efficient tools for organizing and accessing transaction data, which is essential for maintaining scalability. They facilitate quick retrieval and processing of data, enabling the network to handle large volumes of transactions seamlessly. This component ensures that Surge can support high throughput while maintaining data integrity and accessibility.
 
 ## Impact of Soft Forks on Surge Network
+
 **Enhancing On-Chain Scripting with OP_CAT**\
 The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantly enhance the Surge Network's capabilities. _OP_CAT_, by enabling more sophisticated on-chain scripting, offers the opportunity to reduce our reliance on off-chain processes. This improvement can lead to a more streamlined and efficient system, particularly in terms of transaction execution and validation.
 
@@ -39,4 +43,3 @@ With the integration of _OP_CAT_, we anticipate being able to offload certain of
   src="/assets/superstack-core-functions.png"
   alt="superstack core functions"
 />
-
