--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -1,39 +1,23 @@
 ---
 title: Surge | Introduction
-description: Modular Rollup as a Service for Bitcoin Ecosystem
+description: Composable MetaLayer on Bitcoin
 ---
 
 <img src="/assets/intro.png" alt="Introduction" />
 
-# Introduction to Surge [Modular Rollup as a Service for Bitcoin Ecosystem]
+# Introduction to Surge
 
-Surge is a modular Rollup-as-a-Service (RaaS) platform tailored for the Bitcoin ecosystem. Its mission is to facilitate global economic growth and innovation through Layer 2 solutions, specifically Rollups, on top of the most sound, hard and decentralized form of money ever existed - "Bitcoin".
+The Surge network adopts a modular approach, leveraging the best practices
+and lessons from other ecosystems. Inspired by the Cosmos modular design,
+Surge enables decentralized proof validation, while CometBFT ensures Byzantine
+Fault Tolerant (BFT) consensus across the network, offering high performance
+and security. The Surge Integration Kit empowers developers to integrate
+Zero-Knowledge Proofs (ZKPs) and deploy secure rollups and dApps, inheriting
+Bitcoin's robust security guarantees. This approach provides a reliable
+foundation for Surge's key network components: Verifiers: Dedicated to
+zk-proof verification, Surge Verifiers are integral in aggregating and
+settling validated proofs on Bitcoin.
 
-Surge provides a platform for launching high-performance, customizable, general purpose or application-specific Rollups on Bitcoin, significantly reducing time to market.
+Integrated Signers: These handle transaction signing and manage distributed cryptographic keys, governing BTC vault operations with precision and reliability.
 
-The core objective of Surge is to address three critical challenges in the Bitcoin ecosystem through Rollups:
-
-- <p className="_list-paragraph">
-    Providing a secured L2 bridge with Bitcoin Security.
-  </p>
-- <p className="_list-paragraph">
-    Enhancing liquidity through improved integrations and interoperability.
-  </p>
-- <p className="_list-paragraph">
-    Advancing ecosystem development with robust tooling for faster deployment of
-    existing dApps.
-  </p>
-
-
-_**SuperStack is a MetaLayer on Bitcoin**_
-
-
-The Superstack is an intermediate, foundational, PoS-based layer comprising three essential components:
-
-- **Decentralized Verifier Network:** <p className="_list-paragraph">A network of decentralized nodes that validate Rollups proofs and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
-- **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes (TSS), where decentralized network nodes handle signature and key-share generation.</p>
-- **Utilities:** <p className="_list-paragraph">Services such as oracles, indexers, and potential bridges for Runes and Ordinals to Rollups that are currently under exploration.</p>
-
-With these components, Surge will become a comprehensive platform for building, launching, innovating, and expanding the Rollup ecosystem. Surge also offers out-of-the-box support for explorers, bridge UI, wallets, and other auxiliary tools, allowing Rollup teams to focus on their specific use cases and attract more users to the ecosystem.
-
-This approach facilitates the creation of use case-specific rollups and multiple execution environments on Bitcoin, which can position BTC as a real currency beyond just payments.
+UTXO Indexers: Open to anyone, Indexers ensure transparent and seamless data retrieval, critical for enabling real-time audits across the network.
