update: added indexer logo

--- a/docs/pages/metalayer/indexer/overview.mdx
+++ b/docs/pages/metalayer/indexer/overview.mdx
@@ -3,6 +3,8 @@ title: Indexers
 description: Enhancing Rollup Functionality
 ---
 
+import ZoomImage from "../../../components/ZoomImage";
+
 # Indexer
 
 ## Overview
@@ -47,3 +49,8 @@ The core utilities of an Indexer, particularly in a blockchain network like Surg
 - **Scalability:** An Indexer enables a blockchain network to handle larger volumes of transactions by providing quick access to relevant transaction data, improving the scalability of the system.
 
 These core utilities make an Indexer a vital tool in any blockchain ecosystem, providing a framework for efficient data handling, transparency, and security, which are essential for the integrity and scalability of the network.
+
+<ZoomImage
+  src="/assets/indexer-surge.svg"
+  alt="superstack core functions"
+/>
