--- a/docs/pages/metalayer/overview.mdx
+++ b/docs/pages/metalayer/overview.mdx
@@ -40,6 +40,6 @@ The introduction of _OP_CAT_ in a potential Bitcoin soft fork could significantl
 With the integration of _OP_CAT_, we anticipate being able to offload certain off-chain verification computations from the Surge Network, reallocating that processing power toward proof aggregation. This shift would not only optimize the performance of the Surge Network but also improve overall efficiency. By reducing the need for off-chain dependencies, the Surge Network can become even more robust, maintaining high levels of security and scalability while adapting to evolving technological advancements within the Bitcoin network.
 
 <ZoomImage
-  src="/assets/superstack-core-functions.png"
+  src="/assets/Surge-Network.svg"
   alt="superstack core functions"
 />
