Changed Metalayer to MetaLayer

--- a/docs/pages/metalayer/overview.mdx
+++ b/docs/pages/metalayer/overview.mdx
@@ -9,13 +9,13 @@ import ZoomImage from "../../components/ZoomImage";
 
 ## Overview
 
-Surge Network is a composable Metalayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
+Surge Network is a composable MetaLayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
 
 ## Why a Bitcoin Native MetaLayer?
 
-A Bitcoin Native MetaLayer, like the Surge Metalayer, is essential because it leverages Bitcoin's unparalleled security while addressing its limitations in scalability and functionality. Bitcoin, though secure and decentralized, struggles to handle the high transaction volumes and complex operations needed for advanced decentralized applications (dApps).
+A Bitcoin Native MetaLayer, like the Surge MetaLayer, is essential because it leverages Bitcoin's unparalleled security while addressing its limitations in scalability and functionality. Bitcoin, though secure and decentralized, struggles to handle the high transaction volumes and complex operations needed for advanced decentralized applications (dApps).
 
-The Surge Metalayer solves this by providing enhanced throughput and smart contract capabilities without altering Bitcoin's core layer. Additionally, through Inter-Blockchain Communication (IBC), Surge enables seamless interaction with other blockchain ecosystems, facilitating the transfer of assets, data, and zk-proofs. This composability not only scales Bitcoin but also fosters greater flexibility and interoperability for developers, empowering them to build unified applications across multiple chains.
+The Surge MetaLayer solves this by providing enhanced throughput and smart contract capabilities without altering Bitcoin's core layer. Additionally, through Inter-Blockchain Communication (IBC), Surge enables seamless interaction with other blockchain ecosystems, facilitating the transfer of assets, data, and zk-proofs. This composability not only scales Bitcoin but also fosters greater flexibility and interoperability for developers, empowering them to build unified applications across multiple chains.
 
 ## Building Blocks of Surge Network
 
