--- a/docs/pages/metalayer/verifier.mdx
+++ b/docs/pages/metalayer/verifier.mdx
@@ -9,7 +9,7 @@ import ZoomImage from "../../components/ZoomImage";
 
 ## Why do we need a verifier?
 
-A verifier is essential in blockchain systems, especially in the context of zero-knowledge proofs (ZKPs) and complex transaction validation, because it ensures the correctness and integrity of data without exposing sensitive information. In the Surge Metalayer, a verifier plays a critical role by confirming that zk-proofs and other transactions submitted to the network are valid before they are aggregated and inscribed onto Bitcoin. This process guarantees that only legitimate, cryptographically proven transactions are finalized, enhancing the security and trust of the network.
+A verifier is essential in blockchain systems, especially in the context of zero-knowledge proofs (ZKPs) and complex transaction validation, because it ensures the correctness and integrity of data without exposing sensitive information. In the Surge MetaLayer, a verifier plays a critical role by confirming that zk-proofs and other transactions submitted to the network are valid before they are aggregated and inscribed onto Bitcoin. This process guarantees that only legitimate, cryptographically proven transactions are finalized, enhancing the security and trust of the network.
 
 Additionally, the verifier provides decentralization by allowing multiple participants in the network to independently check and validate proofs, preventing any single point of failure or malicious activity. In systems that aggregate multiple transactions or proofs, like Surge, the verifier also ensures scalability by efficiently handling large volumes of data while maintaining high standards of correctness.
 However, the non-Turing-complete nature of Bitcoin's scripting language limits its proof verification capabilities. To address this, our Zero-Knowledge Proof (ZKP) verifier network ensures that the submitted proofs are compatible, verifiable with BitVM2, and can be natively verified on the Bitcoin Layer.
