--- a/docs/pages/overview/why-surge.mdx
+++ b/docs/pages/overview/why-surge.mdx
@@ -1,12 +1,12 @@
 ---
 title: Surge | Why Surge?
-description: The Need for Metalayer on Bitcoin
+description: The Need for MetaLayer on Bitcoin
 ---
 
 # Why Surge?
 
-## Why a Native Metalayer is Needed for Bitcoin
-Bitcoin serves as a secure and decentralized digital transaction protocol but faces limitations in scalability and functionality, hindering its ability to support advanced dApps and handle high transaction volumes. The Surge Metalayer is designed to overcome these challenges without altering Bitcoin's fundamental layer, offering enhanced throughput and smart contract capabilities while maintaining Bitcoin's security guarantees.
+## Why a Native MetaLayer is Needed for Bitcoin
+Bitcoin serves as a secure and decentralized digital transaction protocol but faces limitations in scalability and functionality, hindering its ability to support advanced dApps and handle high transaction volumes. The Surge MetaLayer is designed to overcome these challenges without altering Bitcoin's fundamental layer, offering enhanced throughput and smart contract capabilities while maintaining Bitcoin's security guarantees.
 ## Composability and Interoperability
 Surge goes beyond simple scalability by enabling composable infrastructure. Through Inter-Blockchain Communication (IBC), Surge facilitates seamless interaction with other blockchain ecosystems, enabling the transfer of assets, data, and zk-proofs. This composability empowers developers to integrate functionalities from various blockchains into unified applications, significantly enhancing flexibility and interoperability.
 The Surge architecture allows developers to leverage Bitcoin’s robust security while building rollups that interact with other chains. This creates a multi-layered, interoperable environment where novel decentralized solutions can be composed.
