--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -5,7 +5,7 @@ description: Surge Brand Kit and Logos
 
 <img src="/assets/branding_cover.png" alt="Branding" />
 
-# Branding and Logos [Composable Metalayer to scale Bitcoin]
+# Branding and Logos [Composable MetaLayer to scale Bitcoin]
 
 ## Specification
 
