--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -22,7 +22,7 @@ import BitcoinPlayground from "../components/BitcoinPlayground.tsx";
     {/* <img className="hidden dark:block h-24" src="/assets/surge_short_dark.svg" alt="docs" /> */}
     {/* <img className="block dark:hidden h-24" src="/assets/surge_short_lg.svg" alt="docs" /> */}
       <HomePage.Tagline className="!text-[40px] !font-bold mb-4">Build with Surge</HomePage.Tagline>
-      <HomePage.Description className="mb-10 !text-base	 dark:!text-grey-100 !text-grey-100">Our complete guide to getting started with Surge, a composable Metalayer on Bitcoin  </HomePage.Description>
+      <HomePage.Description className="mb-10 !text-base	 dark:!text-grey-100 !text-grey-100">Our complete guide to getting started with Surge, a composable MetaLayer on Bitcoin  </HomePage.Description>
     <div className="grid grid-cols-1 md:grid-cols-2 gap-5">
       <SurgeNetwork/>
       <SurgeIntro/>
