--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -5,9 +5,9 @@ description: Composable MetaLayer to scale Bitcoin
 
 <img src="/assets/intro.png" alt="Introduction" />
 
-# Introduction to Surge [Composable Metalayer to scale Bitcoin]
+# Introduction to Surge [Composable MetaLayer to scale Bitcoin]
 
-Surge, a Composable Metalayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
+Surge, a Composable MetaLayer on Bitcoin built to provide a secure network for launching Rollups, and dApps to scale Bitcoin innovation. Combining Bitcoin's robust security model with advanced cryptographic techniques like Zero-Knowledge Proofs. At the core of the architecture are zk-aggregation and decentralized verification mechanisms, which ensure scalability without compromising security. Surge serves as the interstitial metalayer for Rollups and dApps, inheriting Bitcoin’s security and extending it to everything built on the network.
 
-Surge’s vision is establishing a metalayer that extends Bitcoin’s security model to decentralized applications, protocols, and rollups. Surge offers a composable environment where developers can deploy rollups that interoperate seamlessly while unlocking Bitcoin liquidity and scaling capabilities. Surge emphasizes zk-aggregation, decentralized verification, and an integrated signing and indexing architecture to unlock Bitcoin liquidity while expanding its scalability.
+Surge’s vision is establishing a MetaLayer that extends Bitcoin’s security model to decentralized applications, protocols, and rollups. Surge offers a composable environment where developers can deploy rollups that interoperate seamlessly while unlocking Bitcoin liquidity and scaling capabilities. Surge emphasizes zk-aggregation, decentralized verification, and an integrated signing and indexing architecture to unlock Bitcoin liquidity while expanding its scalability.
 
